data/all_generated_tests/raw_wast_tests/unreachable_IncorrectBranchTargetResolution_916.wast
;; 7. **Test Description:** Include `unreachable` in a `loop` body, and use `br` and `br_if` instructions to exit the loop conditionally, ensuring that the loop hits `unreachable` if conditions are unmet.    - **Constraint Checked:** Validates correct loop exits before hitting `unreachable`.    - **Incorrect Branch Target Relation:** Ensures that the conditional exits from loops compute branch targets accurately and trap if incorrect.

(assert_invalid
  (module (func $test_unreachable_loop_br_if
    (loop
      (br_if 0 (i32.eq (i32.const 1) (i32.const 1))) 
      (unreachable)
    )
  ))
  "type mismatch"
)